# simple-storage-rust

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
src/: main.rs
src/database/: mod.rs  mongo.rs  sqlite.rs
src/file/: domain.rs  dto.rs  handler.rs  mod.rs  repository.rs  usecase.rs
