[package]
name = "simple-storage-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = "1.0.188"
futures = "0.3.28"
tokio = {version = "1.32.0", features = ["full"]}
dotenv = "0.15.0"
async-trait = "0.1.85"
actix-multipart = "0.7.2"

[dependencies.mongodb]
version = "3.1.1"

[dependencies.rusqlite]
version = "0.33.0"
features = ["bundled"]
